[package]
name = "Knode"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
futures-util = "0.3.31"
futures = "0.3.31"
tokio = { version = "1.38.2", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
sysinfo = "0.37.2"
chrono = "0.4.42"
os_info = "3.14.0"
hostname = "0.4.2"
